crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@number-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/number-binder.input
---
Input: 1.0
Start { kind: BinderOperatorChain }
  Start { kind: LiteralBinder }
    Token { kind: LiteralNumber }
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
