crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@parenthesized-binder-literal.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/parenthesized-binder-literal.input
---
Input: (1.0)
Start { kind: ParenthesizedBinder }
  Token { kind: LeftParenthesis }
  Start { kind: LiteralBinder }
    Token { kind: LiteralNumber }
  Finish
  Token { kind: RightParenthesis }
Finish
