crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@parenthesized-binder-nested.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/parenthesized-binder-nested.input
---
Input: (((1.0)))
Start { kind: BinderOperatorChain }
  Start { kind: ParenthesizedBinder }
    Token { kind: LeftParenthesis }
    Start { kind: BinderOperatorChain }
      Start { kind: ParenthesizedBinder }
        Token { kind: LeftParenthesis }
        Start { kind: BinderOperatorChain }
          Start { kind: ParenthesizedBinder }
            Token { kind: LeftParenthesis }
            Start { kind: BinderOperatorChain }
              Start { kind: LiteralBinder }
                Token { kind: LiteralNumber }
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
            Token { kind: RightParenthesis }
          Finish
          Start { kind: OneOrMore }
          Finish
        Finish
        Token { kind: RightParenthesis }
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Token { kind: RightParenthesis }
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
