crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@qualified-constructor-zero-arity.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/qualified-constructor-zero-arity.input
---
Input: Data.List.Nil
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
Finish
