crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@string-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/string-binder.input
---
Input: "hi!"
Start { kind: LiteralBinder }
  Token { kind: LiteralString }
Finish
