crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@true-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/true-binder.input
---
Input: true
Start { kind: BinderOperatorChain }
  Start { kind: LiteralBinder }
    Token { kind: LiteralTrue }
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
