crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@typed-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/typed-binder.input
---
Input: 1 :: Type
Start { kind: TypedBinder }
  Start { kind: LiteralBinder }
    Token { kind: LiteralInteger }
  Finish
  Token { kind: Colon2 }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
Finish
